# close-to-ray-tracing

./: CMakeLists.txt  README.md
include/glm/ext/: matrix_projection.hpp
include/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
src/: Main.cpp  main.cpp
src/Application/: Window.cpp  Window.h
src/application/: Application.cpp  Application.h
src/image/: Color.cpp  Color.h  Image.cpp  Image.h
src/math/: Ray.cpp  Ray.h
src/renderer/: Renderer.cpp  Renderer.h
src/scene/: Camera.cpp  Camera.h
src/scene/object/: Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
